kubernetes/llama-serve/granite-8b/vllm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: granite-8b
  name: granite-8b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: granite-8b
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: granite-8b
    spec:
      containers:
      - args:
        - --model
        - ibm-granite/granite-3.2-8b-instruct
        - --max-model-len
        - "128000"
        - --enable-auto-tool-choice
        - --chat-template
        - /app/tool_chat_template_granite.jinja
        - --tool-call-parser=granite
        - --port
        - "8000"
        image: vllm/vllm-openai:v0.7.3
        imagePullPolicy: Always
        name: granite-8b
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: "1"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /.cache
          name: hf-cache
        - mountPath: /.triton
          name: triton
        - mountPath: /app
          name: chat-template
        - mountPath: /.config
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: hf-cache
      - emptyDir: {}
        name: triton
      - configMap:
          defaultMode: 420
          name: granite-chat
        name: chat-template
      - emptyDir: {}
        name: config
