kubernetes/llama-serve/granite-8b/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: granite-8b
  labels:
    app: granite-8b
spec:
  to:
    kind: Service
    name: granite-8b
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
